--- a/A2 Module/index.html
+++ b/A2 Module/index.html
@@ -15,9 +15,9 @@
                 <h2>By Jacob Ogden</h2>
                 <time>Monday March 12, 2007</time>
             </div>
-            <div class="front">
+            <div class="contentgrid">
                 <p id="BIG_THE">T</p>
-                <p>DEV LESSONS</p>
+                <p id="para_one">DEV LESSONS</p>
             </div>
         </div>
         <footer class="footer">
