--- a/A2 Module/index.html
+++ b/A2 Module/index.html
@@ -15,9 +15,10 @@
                 <h2>By Jacob Ogden</h2>
                 <time>Monday March 12, 2007</time>
             </div>
-            <div class="contentgrid">
-                <p id="BIG_THE">T</p>
-                <p id="para_one">DEV LESSONS</p>
+            <div>
+                <p id="big-T">T</p>
+                <p id="para-one">he great, desperate, one-sided battles of history – the Alamo, Rorke’s Drift, Iwo Jima – are quickly drawn into myth. And it is through film, that most modern of myth-making mediums, that the oldest heroic battle of all, that of a handful of Spartans against the Persian army at Thermopylae, has been turned into 300, the movie that opened this weekend.</p>
+                <p id="para-two"><img src="assets/images/comparison.jpg" id="comparison-img" width="500" height="170">As in Roberto Rodriguez’s Sin City, director Zack Snyder has created a homage to Frank Miller’s original graphic novel, right down to the brushstrokes of blood. Visually, the film is a wonder: it continues and improves upon the respectful treatment that graphic novels have achieved in film in the last decade (starting with X-Men), using computer graphics seamlessly, at the level of art. This is where the technology should be: not to create clean, glittering spaceships in the darkness of space, but to achieve a majesty and field of vision that would otherwise be impossible, or ruinously expensive, to film, a way of transporting art from the printed page to celluloid honestly and compellingly.</p>
             </div>
         </div>
         <footer class="footer">
