--- a/A3 Module/Part B/index.html
+++ b/A3 Module/Part B/index.html
@@ -10,5 +10,31 @@
         <title></title>
         <link rel="stylesheet" href="src/css/overrides.css" type="text/css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div id="title1">
+                THE JOURNAL OF JELLYFISH STUDIES
+            </div>
+            <div id="title2">
+                Medusa
+            </div>
+        </header>
+        <div id="center_flex">
+            <div id="leftdiv">
+                <div id="part1">
+                    asdf
+                </div>
+                <div id="part2">
+                    VOLUME
+                </div>
+            </div>
+            <img src="assets/images/C_quinquecirrha_3.jpg">
+            <div id="cursive_gibberish">
+                Chrysaora quinquecirrha, Patrice Stephens-Bourgeault
+            </div>
+        </div>
+        <footer>
+            MAY 2014
+        </footer>
+    </body>
 </html>
