--- a/A3 Module/Part B/index.html
+++ b/A3 Module/Part B/index.html
@@ -6,8 +6,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
         />
-        <meta name="description" content="" />
-        <title></title>
+        <meta name="description" content="THE JOURNAL OF JELLYFISH STUDIES" />
+        <title>THE JOURNAL OF JELLYFISH STUDIES</title>
         <link rel="stylesheet" href="src/css/overrides.css" type="text/css" />
     </head>
     <body>
