--- a/A3 Module/Part A/index.html
+++ b/A3 Module/Part A/index.html
@@ -117,7 +117,12 @@
             </section>
             <h4>Enceladus & Europa</h4>
             <aside id="aside_img">
-                <img src="assets/images/enceladus-geysers.jpg" />
+                <img
+                    src="assets/images/enceladus-geysers.jpg"
+                    width="640"
+                    height="396"
+                    alt="enceladus geysers"
+                />
                 Ice water geysers emerge from the “tiger stripes” on the south
                 pole of Enceladus.
             </aside>
