--- a/A3 Module/Part B/index.html
+++ b/A3 Module/Part B/index.html
@@ -12,29 +12,24 @@
     </head>
     <body>
         <header>
-            <div id="title1">
-                THE JOURNAL OF JELLYFISH STUDIES
-            </div>
-            <div id="title2">
-                Medusa
-            </div>
+            <div id="title1">THE JOURNAL OF JELLYFISH STUDIES</div>
+            <div id="title2">Medusa</div>
         </header>
         <div id="center_flex">
             <div id="leftdiv">
-                <div id="part1">
-                    asdf
-                </div>
-                <div id="part2">
-                    VOLUME
-                </div>
+                <div id="part1">asdf</div>
+                <div id="part2">VOLUME</div>
             </div>
-            <img src="assets/images/C_quinquecirrha_3.jpg">
+            <img
+                src="assets/images/C_quinquecirrha_3.jpg"
+                width="400"
+                height="680"
+                alt="black and white jellyfish"
+            />
             <div id="cursive_gibberish">
                 Chrysaora quinquecirrha, Patrice Stephens-Bourgeault
             </div>
         </div>
-        <footer>
-            MAY 2014
-        </footer>
+        <footer>MAY 2014</footer>
     </body>
 </html>
