God this was a nightmare

--- a/A3 Module/Part B/index.html
+++ b/A3 Module/Part B/index.html
@@ -12,22 +12,38 @@
     </head>
     <body>
         <header>
-            <div id="title1">THE JOURNAL OF JELLYFISH STUDIES</div>
-            <div id="title2">Medusa</div>
+            <div class="header" id="title1">
+                THE JOURNAL OF<br />JELLYFISH STUDIES
+            </div>
+            <div class="header" id="title2">Medusa</div>
         </header>
-        <div id="center_flex">
-            <div id="leftdiv">
-                <div id="part1">asdf</div>
-                <div id="part2">VOLUME</div>
+        <div id="center">
+            <div class="center" id="left">
+                <div class="left" id="part1">
+                    <span
+                        class="part1"
+                        style="
+                            text-decoration: underline;
+                            text-decoration-style: dotted;
+                        "
+                        >N</span
+                    >
+                    <span class="part1" id="otwo"><sup>o</sup>2</span>
+                </div>
+                <div class="left" id="part2">VOLUME</div>
             </div>
             <img
+                class="center"
                 src="assets/images/C_quinquecirrha_3.jpg"
                 width="400"
                 height="680"
                 alt="black and white jellyfish"
+                id="jelly"
             />
-            <div id="cursive_gibberish">
-                Chrysaora quinquecirrha, Patrice Stephens-Bourgeault
+            <div class="center" id="gibberish_container">
+                <span id="cursive_gibberish">
+                    Chrysaora quinquecirrha, Patrice Stephens-Bourgeault
+                </span>
             </div>
         </div>
         <footer>MAY 2014</footer>
